--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
       <% } %> 
       <% if(messages.length > 0) {%>
         <% for(var i = 0; i < messages.length; i++) {%>
-          <div class="alert alert-danger">
+          <div className="alert alert-danger">
               <a href="#" class="close" data-dismiss="alert" aria-label="close">
                   &times;
               </a>
